styles/shop/filter.module.css
/* FilterSection.module.css */

.filter-checkbox {
  display: none;
}

.sub-category {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
}

#filter-menu {
  margin: 1rem 0 1rem 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-filter {
  display: flex;
  text-decoration: none;
  color: var(--black);
  border: 0.5px solid var(--black);
  padding: 4px;
  height: 48px;
  width: 144px;
  justify-content: center;
  align-items: center;
  text-transform: uppercase;
  font-size: var(--h4);
  font-family: var(--serif);
  gap: 0.5rem;
}

.btn-filter + .filter-section {
  position: fixed;
  top: 0;
  left: 100%;
  height: 100%;
  width: 100%;
  overflow: auto;
  display: flex;
  flex-direction: column;
  opacity: 0;
  background: white;
  transition: left 0s 0.5s, opacity 0.5s;
}

.btn-filter:focus + .filter-section,
.btn-filter + .filter-section:focus-within {
  left: 0;
  opacity: 1;
  transition: left 0s, opacity 0.5s;
}

.btn-filter + .filter-section button {
  list-style-type: none;
  display: flex;
  flex-flow: row-reverse wrap;
  align-items: center;
  position: relative;
  gap: 1rem;
  top: -50vh;
  min-width: 100vw;
  max-width: 100vw;
  margin: 0 auto;
  overflow: hidden;
  transition: top 0.5s;
  align-items: center;
  justify-content: center;
  padding: 0;
}

.btn-filter:focus + .filter-section button,
.btn-filter + .filter-section:focus-within button {
  top: 0;
}

.filter-section {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  padding: 40px 0 400px 0;
}

.filter-categories {
  margin-top: 2rem;
}

.filter-section h3 {
  border-bottom: 0.5px soli var(--grey);
  font-size: var(--h3);
}

.filter-category:first-child {
  border-top: 0.5px solid var(--grey);
}

.filter-category button {
  height: 96px;
  background: white;
  border: none;
  border-bottom: 0.5px solid var(--grey);
  font-size: var(--h4);
}

.sub-category{
  margin-top: 2rem;
  font-size: var(--h5);
  gap: 1rem;
}

.filter-category:nth-child(4) .sub-category label,
.filter-category:nth-child(3) .sub-category label{
  display: flex;
  flex-flow: row-reverse wrap;
  align-items: center;
  justify-content: space-between;
  width: 144px;
}
.filter-category:nth-child(4) .sub-category label svg{
  width: 48px;
  height: 48px;
}

.filter-category:nth-child(3) .sub-category label svg{
  width: 24px;
  height: 24px;
}

@media (min-width: 1200px) {
  .btn-filter {
    display: none;
  }

  #filter-menu {
    grid-area: 1 / 1 / 4 / 2;
    border: 0.5px solid var(--grey);
    margin: 1rem;
    box-shadow: 0px 2px 4px 1.5px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
  }

  .filter-category {
    
    border-bottom: 0.5px solid var(--grey);
    margin: 2rem;
  }

  .filter-category:first-child {
    border-top: none;
  }

  #filter-menu .filter-section {
    left: 0;
    position: static;
    opacity: 1;
    background: none;
    padding: 0;
    margin: 0;
    gap: 1rem;
    margin-top: 1rem;
    justify-content: flex-start;
  }

  #filter-menu .filter-section button {
    display: flex;
    flex-flow: row wrap;
    border: none;
    top: 0;
    min-width: 0vw;
    cursor: pointer;
  }
  .sub-category{
    margin-top: 0;
    font-size: var(--h6);
    gap: 0;
  }

  .sub-category label {
    cursor: pointer;
  }

  #filter-menu .sub-category label:hover {
    color: var(--primary-color);
  }
  
}

